--- a/EcomerceMVC/appsettings.json
+++ b/EcomerceMVC/appsettings.json
@@ -5,8 +5,8 @@
 
   "Authentication": {
     "Google": {
-      "ClientId": "697201915871-ao829ka5ftglnahrt7c6ucfbl54tpu5h.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "",
+      "ClientSecret": ""
 
     }
   },
